Fix checkbox list item alignemtn with new obsidian version

--- a/[editor] Typography fixes.css
+++ b/[editor] Typography fixes.css
@@ -28,7 +28,7 @@
 
     .task-list-item-checkbox {
         transform: translateY(-.5px);
-        margin-left:0;
+        margin-left:5px;
     }
 }
 
